fix(ui): agent message z-index (#1385)

--- a/apps/beeai-ui/src/modules/runs/chat/ChatAgentMessage.module.scss
+++ b/apps/beeai-ui/src/modules/runs/chat/ChatAgentMessage.module.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   row-gap: $spacing-03;
   position: relative;
-  z-index: 1;
+  z-index: 0;
   &::before {
     content: '';
     inline-size: calc(100vw - var(--scrollbar-width));
